# POP_OPEN

./: README.md
agentme/: SDK_AGENT_README.md
apps/tuya.ai/your_pop_robot/: CMakeLists.txt  CONNECTION.md  Kconfig  README.md  build_flash.sh  hardware.yaml
apps/tuya.ai/your_pop_robot/config/: LIBTECH_POP_T5AI_DECONFIG.config
apps/tuya.ai/your_pop_robot/src/: app_chat_bot.c  tuya_main.c
apps/tuya.ai/your_pop_robot/src/hardware/audio/: AUDIO.md  local_audio.c  local_audio.h
apps/tuya.ai/your_pop_robot/src/hardware/audio/sound_lib/: gen_audio_arrays.py
apps/tuya.ai/your_pop_robot/src/hardware/audio/sound_lib/doubt/: doubt_audio_assets.c  doubt_audio_assets.h
apps/tuya.ai/your_pop_robot/src/hardware/audio/sound_lib/happy/: happy_audio_assets.c  happy_audio_assets.h
apps/tuya.ai/your_pop_robot/src/hardware/audio/sound_lib/normal/: normal_audio_assets.c  normal_audio_assets.h
apps/tuya.ai/your_pop_robot/src/hardware/audio/sound_lib/test/: test_audio_assets.c  test_audio_assets.h
apps/tuya.ai/your_pop_robot/src/hardware/button/: button_power.c  button_power.h
apps/tuya.ai/your_pop_robot/src/hardware/imu/: IMU.md  imu_ahrs.c  imu_ahrs.h  mahony.c  mahony.h  mpu6050.c  mpu6050.h
apps/tuya.ai/your_pop_robot/src/hardware/lcd/: LCD.md  lcd_gc9d01.c  lcd_gc9d01.h
apps/tuya.ai/your_pop_robot/src/hardware/lcd/display_lib/: gen_lcd_arrays.py  lcd_asset_types.h
apps/tuya.ai/your_pop_robot/src/hardware/lcd/display_lib/left_eye/doubt/: left_eye_doubt_lcd_assets.c  left_eye_doubt_lcd_assets.h
apps/tuya.ai/your_pop_robot/src/hardware/lcd/display_lib/left_eye/happy/: left_eye_happy_lcd_assets.c  left_eye_happy_lcd_assets.h
apps/tuya.ai/your_pop_robot/src/hardware/lcd/display_lib/left_eye/normal/: left_eye_normal_lcd_assets.c  left_eye_normal_lcd_assets.h
apps/tuya.ai/your_pop_robot/src/hardware/lcd/display_lib/left_eye/test/: gen_lcd_assets.py  left_eye_lcd_assets.c  left_eye_lcd_assets.h  left_eye_test_lcd_assets.c  left_eye_test_lcd_assets.h
apps/tuya.ai/your_pop_robot/src/hardware/lcd/display_lib/right_eye/doubt/: right_eye_doubt_lcd_assets.c  right_eye_doubt_lcd_assets.h
apps/tuya.ai/your_pop_robot/src/hardware/lcd/display_lib/right_eye/happy/: right_eye_happy_lcd_assets.c  right_eye_happy_lcd_assets.h
apps/tuya.ai/your_pop_robot/src/hardware/lcd/display_lib/right_eye/normal/: right_eye_normal_lcd_assets.c  right_eye_normal_lcd_assets.h
apps/tuya.ai/your_pop_robot/src/hardware/lcd/display_lib/right_eye/test/: right_eye_lcd_assets.c  right_eye_lcd_assets.h  right_eye_test_lcd_assets.c  right_eye_test_lcd_assets.h
apps/tuya.ai/your_pop_robot/src/hardware/microphone/: MICROPHONE.md  mic_bringup.c  mic_bringup.h
apps/tuya.ai/your_pop_robot/src/hardware/moto/: MOTO.md  moto_bringup.c  moto_bringup.h
apps/tuya.ai/your_pop_robot/src/hardware/touch/: TOUCH.md  touch_sensor.c  touch_sensor.h
apps/tuya.ai/your_pop_robot/src/interactive/HAL/include/: input_trigger_layer.h
apps/tuya.ai/your_pop_robot/src/interactive/HAL/src/: input_trigger_layer.c  output_hal.c
apps/tuya.ai/your_pop_robot/src/interactive/behavior/include/: behavior_pipeline.h
apps/tuya.ai/your_pop_robot/src/interactive/behavior/src/: behavior_pipeline.c
apps/tuya.ai/your_pop_robot/src/interactive/hal/include/: hardware_abstraction.h  input_trigger_layer.h  output_hal.h
apps/tuya.ai/your_pop_robot/src/interactive/hal/src/: hardware_abstraction.c  input_trigger_layer.c  output_hal.c
apps/tuya.ai/your_pop_robot/src/interactive/python/: gen_input_thresholds.py  gen_output_modes.py
apps/tuya.ai/your_pop_robot/src/interactive/yaml/: input.yaml  output.yaml
apps/tuya.ai/your_pop_robot/tools/: README.md  imu_attitude_ui.py  mic_waveform_ui.py  requirements-imu-ui.txt  requirements.txt
apps/tuya_mimiclaw/: README.md  README_zh.md
boards/T5AI/: Kconfig
boards/T5AI/LIBTECH_POP_T5AI_BOARD/: Kconfig  board_com_api.h  libtech_pop_t5ai_board.c
platform/: platform_config.yaml
rules/: AGENT_DEV.md  CODE_STYLE.md  DEVELOPMENT_README.md  PROMPT_ENGINEERING.md  VERSIONING_README.md
src/libhttp/include/: http_client_interface.h
src/libhttp/src/: http_client_wrapper.c  http_session.c
src/libtls/: Kconfig
src/libtls/port/: tuya_tls_config.h
src/peripherals/display/tdd_display/src/spi/: tdd_disp_spi_gc9d01.c
src/tal_cli/src/: tal_cli.c
src/tal_kv/src/: tal_kv.c
src/tuya_cloud_service/ble/: ble_mgr.c  ble_mgr.h
src/tuya_cloud_service/cloud/: iotdns.c  tuya_iot.c
src/tuya_cloud_service/lan/: lan_sock.c  lan_sock.h  tuya_lan.c
src/tuya_cloud_service/netcfg/: ap_netcfg.c
src/tuya_cloud_service/netmgr/: netmgr.c
src/tuya_cloud_service/schema/: tuya_iot_dp.c
src/tuya_cloud_service/transport/: tcp_transporter.c
tools/cli_command/: cli_build.py
